@@ -1,5 +1,8 @@
 Version 0.4.6 (11 Jan 2008)
  - Bug fix: new events can have empty UID
+ - Added support for reading/writing ATTENDEE
+ - Bug fix: proper handling of "floating" date-times. Added new Date.setFloating
+   and Date.isFloating methods.
 Version 0.4.5 (03 Jan 2008)
  - Bug fix: weekly repeating events not saved correctly
  - CalendarPanel bug fix: After pressing the "Today" button, the scrollbar values
